change submission adreess

--- a/index.html
+++ b/index.html
@@ -12,22 +12,14 @@
         Your smile brings joy every day,<br>
         Hope happiness comes your way! </p>
     <div class="container">
-        <!-- <p class="birthday-text">Happy Birthday to you, sweet girl,
-            You shine so bright, like a pearl.
-            Your smile brings joy every day,
-            Hope happiness comes your way! 🎉💖</p> -->
         <h1 class="birthday-text2">HAPPY BIRTHDAY CUTIE</h1>
-        <!-- <form id="birthday-form" action="mailto:himanshugupta2068ba@gmail.com">
-            <textarea id="birthday-message" name="message" rows="4" placeholder="Write your birthday wish..."></textarea>
-            <button type="submit">Send & See Surprise</button>
-        </form> -->
 
         <form action="https://formsubmit.co/himanshugupta2068ba@gmail.com" method="POST">
             <!-- Message box -->
             <textarea name="message" rows="4" placeholder="Write your birthday wish cutie..." required></textarea><br>
         
             <!-- Hidden input: redirect after submit -->
-            <input type="hidden" name="_next" value="https://cutiebirthday.netlify.app/cake.html">
+            <input type="hidden" name="_next" value="https://cardbirthdaycutie.netlify.app/cake.html">
         
             <!-- Optional: disable spam CAPTCHA -->
             <input type="hidden" name="_captcha" value="false">
