--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="index-page">
+    <audio src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/605876/happy-birthday-trimmed.mp3" autoplay loop></audio>
     <p class="birthday-text1" style="color: rgb(165, 71, 71);">Happy Birthday to you, sweet girl,<br>
         You shine so bright, like a pearl.<br>
         Your smile brings joy every day,<br>
@@ -29,5 +30,16 @@
           </form>
           
     </div>
+    <script>
+        window.addEventListener('DOMContentLoaded', () => {
+            const audio = document.querySelector('audio');
+            audio.play().catch(error => {
+                console.log('Autoplay was prevented. Waiting for user interaction.');
+                document.body.addEventListener('click', () => {
+                    audio.play();
+                }, { once: true });
+            });
+        });
+    </script>
 </body>
 </html>
