--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body class="index-page">
     <audio src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/605876/happy-birthday-trimmed.mp3" autoplay loop></audio>
-    <p class="birthday-text1" style="color: rgb(165, 71, 71);">Happy Birthday to you, sweet girl,<br>
+    <p class="birthday-text1" style="color: rgb(165, 71, 71);font-size: 1.5rem; margin-top: 50px;">Happy Birthday to you, sweet girl,<br>
         You shine so bright, like a pearl.<br>
         Your smile brings joy every day,<br>
         Hope happiness comes your way! </p>
